--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,9 +22,9 @@
                     {{#each articles}}
                         <tr>
                             <td class='numField'> {{@index}} </td>
-                            <td class='headLineField' dbid={{_id}}> {{headline}} </td>
-                            <td class='numNotesField' dbid={{_id}}> {{numNotes}}</td>
-                            <td class='fas fa-trash-alt delField' dbid={{_id}}> </td>
+                            <td class='headLineField' aid={{_id}}> {{headline}} </td>
+                            <td class='numNotesField' aid={{_id}}> {{numNotes}}</td>
+                            <td class='fas fa-trash-alt delField' aid={{_id}}> </td>
                         </tr>
                     {{/each}}
                 </tbody>
@@ -32,25 +32,68 @@
         </div>
     </div>
 </div>
-<!--
-                <div class='articlesArea'> 
-                    <h3> Total Articles found: {{articlesCount}} </h3>
-                    <ul>
-                        {{#each articles}}
-                            <li>
-                                <p> Number of Headlines: {{totalFound}} </p>
-                                <ul>
-                                    {{#each headlines as |headline|}}
-                                        <li>
-                                            <p> {{headline}} </p>
-                                        </li>
-                                    {{/each}}
-                                    <li>
-                                        <a hfref={{_id}}>{{_id}}</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        {{/each}}
-                    </ul>
+
+<!-- NOTES MODAL BOX CONTAINER -->
+<!-- ToDo determine how to update this with handlebars -->
+<div class='container' id='modalContainer'>
+    <div class='modal fade' id='noteModal'>
+        <div class='modal-dialog'>
+            <div class='modal-content' id='myModalContent'>
+                <div class='modal-header'>
+                    <h4 class='modal-title'>Notes</h4>
+                    <button type='button' class='close' data-dismiss='modal'>&times;</button>
                 </div>
--->
+
+                <div class='modal-body'>
+                    <div class='table-responsive' id='noteTable'>
+                        <table class='table table-hover'>
+                            <thead>
+                                <tr>
+                                    <th class='noteTitleField'>Title</th>
+                                    <th class='noteBodyField'>Body</th>
+                                    <th class='noteDelField'>delete</th>
+                                </tr>
+                            </thead>
+                            <tbody id='noteTableData'>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <div class='modal-footer'>
+                    <button type="button" id="addNote" class="btn btn-primary btn-block button">Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- NOTES MODAL BOX CONTAINER ENDS -->
+
+<!-- ADD NOTE MODAL -->
+    <div class="modal fade" id="addNoteDiv">
+        <div class="modal-dialog">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h2 class="modal-title">Add Note: </h2>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <input type="title" class="form-control" id="txtTitle" placeholder="Title">
+                        </div>
+                        <div class="form-group">
+                            <input type="body" class="form-control" id="txtBody" placeholder="Body">
+                        </div>
+                    </form>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" id="addNoteBtn" class="btn btn-primary btn-block button">Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- END OF ADD NOTE MODAL -->
